--- a/forge/dependencies.gradle
+++ b/forge/dependencies.gradle
@@ -5,6 +5,8 @@ dependencies {
     compileOnly fg.deobf("me.shedaniel:RoughlyEnoughItems-api-forge:$rei_version")
     compileOnly fg.deobf("me.shedaniel.cloth:basic-math:0.6.1")
 
+    compileOnly fg.deobf("net.darkhax.gamestages:GameStages-Forge-1.20.1:15.0.1")
+
     compileOnly fg.deobf("mezz.jei:jei-$jei_minecraft_version-common-api:$jei_version")
     compileOnly fg.deobf("mezz.jei:jei-$jei_minecraft_version-forge-api:$jei_version")
     if (jei_minecraft_version == minecraft_version) {
