--- a/forge/dependencies.gradle
+++ b/forge/dependencies.gradle
@@ -12,4 +12,6 @@ dependencies {
     if (jei_minecraft_version == minecraft_version) {
         runtimeOnly fg.deobf("mezz.jei:jei-$jei_minecraft_version-forge:$jei_version")
     }
+
+    implementation fg.deobf('com.blamejared.crafttweaker:CraftTweaker-forge-1.20.1:14.0.27')
 }
