feat: Add data generation, add some preliminary variants for workbench

--- a/forge/src/main/resources/META-INF/mods.toml
+++ b/forge/src/main/resources/META-INF/mods.toml
@@ -8,7 +8,7 @@ modId="craftingforblockheads"
 version="${mod_version}"
 displayName="CraftingForBlockheads"
 displayURL="https://mods.twelveiterations.com/mc/craftingforblockheads"
-logoFile="craftingforblockheads-icon.png"
+logoFile="craftingforblockheads.png"
 credits="BlayTheNinth"
 authors="BlayTheNinth"
 description='''
